cmake_minimum_required(VERSION 3.5)


##----------------------------------------------------------------------------##
## Project                                                                    ##
##----------------------------------------------------------------------------##
set(PROJECT acow_math)
project(${PROJECT})


##----------------------------------------------------------------------------##
## Sources                                                                    ##
##----------------------------------------------------------------------------##
##------------------------------------------------------------------------------
## Sources
set(SOURCES
    acow/src/dummy.cpp ## Just to build the lib.
)


##----------------------------------------------------------------------------##
## Library                                                                    ##
##----------------------------------------------------------------------------##
##------------------------------------------------------------------------------
## Lib.
add_library(${PROJECT} ${SOURCES})

##-----------------------------------------------------------------------------
## Include directories.
target_include_directories(${PROJECT} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

##------------------------------------------------------------------------------
## Dependencies.
target_link_libraries(${PROJECT} LINK_PUBLIC acow_c_goodies  )
target_link_libraries(${PROJECT} LINK_PUBLIC acow_cpp_goodies)
